Fix mobile overflow issue:

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -181,6 +181,10 @@ footer.footer
 
 // Gallery
 
+// Overflow fix
+body
+  overflow-x: hidden;
+
 // Mega menu
 
 @media screen and (min-width: 1024px)
